# AI-Health

./: APPENDIX.md  CARE_PLAN_BUSINESS_ANALYSIS.md  DEVELOPMENT.md  HOT_RELOAD_GUIDE.md  PROJECT_OVERVIEW.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  sample-medical-documents.json  sample-medical-text.txt  setup-dev.sh  setup-docker-dev.sh
ai-health-service/: .dockerignore  .env.example  .gitignore  AMAZON_NOVA_MICRO_GUIDE.md  ARCHITECTURE_SUMMARY.md  BEDROCK_ACCESS_CHECK.md  BEDROCK_ACCESS_FIX.md  CARE_PLAN_GUIDE.md  CLAUDE_3_SONNET_GUIDE.md  CLAUDE_ENDPOINTS_GUIDE.md  CLAUDE_SONNET_4_5_READY.md  CLAUDE_SONNET_4_5_SETUP.md  Dockerfile  Dockerfile.dev  MODULAR_ARCHITECTURE.md  POETRY_MIGRATION.md  README.md  S3_ACCESS_FIX.md  TEXT_EXTRACTION_GUIDE.md  bedrock_diagnostic.py  demo_complete.py  deploy-docker.sh  docker-compose.prod.yml  docker-compose.yml  monitor_claude_activation.sh  pyproject.toml  requirements.txt  run.py  setup.sh  test-document.txt  test_bedrock_fix.sh
ai-health-service/app/: config.py  main.py  main_old.py
ai-health-service/app/modules/: care_plan.py  file_upload.py  text_extraction.py
ai-health-service/app/routes/: __init__.py  bedrock_routes.py  care_plan_routes.py  s3_routes.py  text_extraction_routes.py
ai-health-service/tests/: test_api.py  test_api_comprehensive.py  test_care_plan.py  test_s3_access.py
ai-health-ui/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  nginx.conf  package-lock.json  package.json
ai-health-ui/public/: index.html  manifest.json
ai-health-ui/src/: App.css  App.js  (+1 more)
(+8 files in other folders)
